Clipping of render layer boundaries does not take page scale into account https://bugs.webkit.org/show_bug.cgi?id=76850

Source/WebCore:

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-01-25
Reviewed by Simon Fraser.

When inserting render layers into the compositor's overlap map, the
layer boundaries are clipped against any potential parent clip rects.
The clip rects are given in CSS coordinates, while the render layer
boundaries are in scaled CSS coordinates, so the result is incorrect.
This patch scales the clip rects before calculating the intersection.

Test: compositing/overflow/overflow-scaled-descendant-overlapping.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::addToOverlapMap):

LayoutTests:

Added new test to make sure render layers inside clipped containers
are correctly tested for overlap with other layers.

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-01-25
Reviewed by Simon Fraser.

* compositing/overflow/overflow-scaled-descendant-overlapping.html: Added.
* platform/chromium-linux/compositing/overflow/overflow-scaled-descendant-overlapping-expected.png: Added.

Canonical link: https://commits.webkit.org/93882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105879 268f45cc-cd09-0410-ab3c-d52691b4dbfc